<resources>
    <string name="app_name">CuidArte</string>
    <string name="facebook_app_id">835060432438592</string>
    <string name="facebook_client_token">4e2f1e92e88f0457d5d3943bc16a5c0f</string>
    <string name="carLvlInicio">Cargando...</string>
    <string name="sesTxtCorreo">Correo</string>
    <string name="sesTxtClave">Clave</string>
    <string name="sesChkRecordar">Recordar Sesion</string>
    <string name="sesBtnIngresar">Ingresar</string>
    <string name="sesBtnSalir">Salir</string>
    <string name="sesLblRegistro">Registrarse</string>
    <string name="regTxtFechaNac">Fecha de Nacimiento</string>
    <string name="regLblSexo">Seleccione su sexo:</string>
    <string name="regRbtNoDefinido">Sin Definir</string>
    <string name="regRbtMasculino">Masculino</string>
    <string name="regRbtFemenino">Femenino</string>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string-array name="tipos_usuario">
        <item>-- Seleccione su rol --</item>
        <item>Adulto_Mayor</item>
        <item>Voluntario</item>
        <item>Admin</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bieLblSaludo">Hola {usuario}</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="idioma">Español</string>
    <string name="apariencia_temas">Apariencia y Temas</string>
    <string name="modo_oscuro">Modo Oscuro</string>
    <string name="notificaciones_sonido">Notificaciones y Sonido</string>
    <string name="activar_notificaciones">Activar Notificaciones de la App</string>
    <string name="vibracion_sonido">Vibración y Sonido en Alertas</string>
    <string name="ajustes_generales">Ajustes Generales</string>
    <string name="idioma_app">Idioma de la Aplicación</string>
    <string name="sincronizar_datos">Sincronizar datos automáticamente</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="conf_app">Configuración de la Aplicación</string>
    <string name="regCrearCuenta">Crear Cuenta</string>
    <string name="regDescripcion">Completa tus datos para formar parte de CuidArte</string>
    <string name="regFoto">Foto de perfil</string>
    <string name="reCamFoto">Cambiar foto</string>
    <string name="regTipoUsuario">Tipo de Usuario</string>
    <string name="regDni">DNI</string>
    <string name="regNombre">Nombres</string>
    <string name="regApellidos">Apellidos</string>
    <string name="regFecNac">Fecha de nacimiento</string>
    <string name="regTeléfono">Teléfono</string>
    <string name="regSexo">Sexo</string>
    <string name="regMasculino">Masculino</string>
    <string name="regFemenino">Femenino</string>
    <string name="regNoDef">No definido</string>
    <string name="regDes">Descripción personal (opcional)</string>
    <string name="regHabil">Intereses o habilidades (separados por coma)</string>
    <string name="regLatitud">Latitud</string>
    <string name="reglblLon">Longitud</string>
    <string name="reglblIdi">Idioma</string>
    <string name="reglblCorreo">Correo electrónico</string>
    <string name="regLblContra">Contraseña</string>
    <string name="regLblContraCon">Confirmar contraseña</string>
    <string name="regLblDis">Distrito / Ubicación</string>
    <string name="regLblTer">Acepto los términos y condiciones</string>
    <string name="regTxtRegistrar">Registrar</string>
    <string name="regTxtCan">Cancelar</string>
    <string name="sesTxtOlv">¿Olvidaste tu contraseña?</string>
    <string name="evatxtcal">Calificar adulto mayor</string>
    <string name="evatxtcom">Escribe un comentario...</string>
    <string name="evabtnEnv">Enviar</string>
    <string name="bientxtcui">¡Bienvenido a Cuidarte!</string>
    <string name="bienbtnEnt">Entrar</string>
    <string name="chatxtMen">Escribe un mensaje...</string>
    <string name="pertxtpro">Jorge Perez</string>
    <string name="pertxtcor">juan.perez@ejemplo.com</string>
    <string name="pertxtdes">Soy voluntario con experiencia en acompañamiento a adultos mayores, lectura y apoyo digital.</string>
    <string name="pertxthab">Habilidades</string>
    <string name="pertxtlec">Lectura</string>
    <string name="pertxtapd">Apoyo digital</string>
    <string name="pertxtacom">Acompañamiento</string>
    <string name="pertxtdis">Disponibilidad</string>
    <string name="pertxtahor">Lunes a Viernes, 9:00 am - 5:00 pm</string>
    <string name="pertxtadtg">Datos Generales</string>
    <string name="perlbltel">Teléfono</string>
    <string name="perlblsex">Sexo</string>
    <string name="perlblfec">Fecha de nacimiento</string>
    <string name="perlblidi">Idioma</string>
    <string name="perlblint">Intereses</string>
    <string name="perlblubi">Ubicación</string>
    <string name="perlbledit">Editar perfil</string>
    <string name="lblAgrCal">Agregar Calificación</string>
    <string name="lblSolUbi">Ubicación</string>
    <string name="lblSolAceptar">Aceptar</string>
    <string name="VerAgenda">Ver Agenda</string>
    <!-- Disponibilidad -->
    <string-array name="disponibilidad_voluntario">
        <item>Cualquier Hora</item>
        <item>Mañana</item>
        <item>Tarde</item>
        <item>Noche</item>
        <item>Fin de Semana</item>
    </string-array>

    <!-- Tipo de recordatorio -->
    <string-array name="tipo_recordatorio">
        <item>Medicamento</item>
        <item>Cita Médica</item>
        <item>Actividad Social</item>
        <item>Otro</item>
    </string-array>

    <!-- Tipos de ayuda -->
    <string-array name="tipos_ayuda">
        <item>Lectura</item>
        <item>Apoyo Digital</item>
        <item>Acompañamiento</item>
        <item>Cocina</item>
        <item>Limpieza</item>
        <item>Ejercicios</item>
        <item>Compras</item>
        <item>Transporte</item>
    </string-array>

    <!-- Métodos de pago -->
    <string-array name="metodos_pago">
        <item>Tarjeta de Crédito</item>
        <item>Tarjeta de Débito</item>
        <item>Yape</item>
        <item>Plin</item>
        <item>Transferencia Bancaria</item>
    </string-array>
</resources>