<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/txtTituloEvaluar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/evatxtcal"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>

    <RatingBar
        android:id="@+id/ratingEvaluacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/edtComentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/evatxtcom"
        android:padding="10dp"
        android:background="@drawable/rounded_edittext_chat"
        android:inputType="textMultiLine"
        android:minHeight="80dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnEnviarEvaluacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/evabtnEnv"
        android:backgroundTint="@color/purple_500"
        android:textColor="@android:color/white"
        android:layout_marginTop="12dp"/>
</LinearLayout>
